syntax = "proto3";

package users;

option go_package = "gateway/users";

service UserService {
    // User
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (GenericResponse);
    rpc GetUserAccessInfo(GetUserAccessInfoRequest) returns (GetUserAccessInfoResponse);
    rpc GetUserAccessInfoByEmail(GetUserAccessInfoByEmailRequest) returns (GetUserAccessInfoResponse);
    rpc ListAdminAccounts(ListAdminAccountsRequest) returns (ListAdminAccountsResponse);
    rpc UpdateAdminAccount(UpdateAdminAccountRequest) returns (GenericResponse);
    rpc SuspendAdminAccount(SuspendAdminAccountRequest) returns (GenericResponse);
    rpc TouchUserLastLogin(TouchUserLastLoginRequest) returns (GenericResponse);
    rpc UpdateUserEmail(UpdateUserEmailRequest) returns (GenericResponse);

    // Client
    rpc CreateClient(CreateClientRequest) returns (CreateClientResponse);
    rpc GetClient(GetClientRequest) returns (GetClientResponse);
    rpc ListClients(ListClientsRequest) returns (ListClientsResponse);
    rpc UpdateClient(UpdateClientRequest) returns (UpdateClientResponse);
    rpc ArchiveClient(ArchiveClientRequest) returns (GenericResponse);
    rpc LinkClientUser(LinkClientUserRequest) returns (GenericResponse);
    rpc GetClientsByLinkedUser(GetClientByLinkedUserRequest) returns (ListClientsResponse);

    // Address
    rpc CreateAddress(CreateAddressRequest) returns (CreateAddressResponse);
    rpc GetAddress(GetAddressRequest) returns (GetAddressResponse);
    rpc ListAddresses(ListAddressesRequest) returns (ListAddressesResponse);
    rpc UpdateAddress(UpdateAddressRequest) returns (UpdateAddressResponse);
    rpc ArchiveAddress(ArchiveAddressRequest) returns (GenericResponse);

    // Country
    rpc CreateCountry(CreateCountryRequest) returns (CreateCountryResponse);
    rpc GetCountry(GetCountryRequest) returns (GetCountryResponse);
    rpc ListCountries(ListCountriesRequest) returns (ListCountriesResponse);
    rpc UpdateCountry(UpdateCountryRequest) returns (UpdateCountryResponse);
    rpc DeleteCountry(DeleteCountryRequest) returns (GenericResponse);

    // CountryGroup
    rpc CreateCountryGroup(CreateCountryGroupRequest) returns (CreateCountryGroupResponse);
    rpc GetCountryGroup(GetCountryGroupRequest) returns (GetCountryGroupResponse);
    rpc ListCountryGroups(ListCountryGroupsRequest) returns (ListCountryGroupsResponse);
    rpc UpdateCountryGroup(UpdateCountryGroupRequest) returns (UpdateCountryGroupResponse);
    rpc DeleteCountryGroup(DeleteCountryGroupRequest) returns (GenericResponse);
    rpc AttachCountry(AttachCountryRequest) returns (GenericResponse);
    rpc DetachCountry(DetachCountryRequest) returns (GenericResponse);

    // Tax
    rpc CreateTax(CreateTaxRequest) returns (CreateTaxResponse);
    rpc GetTax(GetTaxRequest) returns (GetTaxResponse);
    rpc ListTaxes(ListTaxesRequest) returns (ListTaxesResponse);
    rpc ListTaxesForUser(ListTaxesForUserRequest) returns (ListTaxesResponse);
    rpc ListTaxesForCountry(ListTaxesForCountryRequest) returns (ListTaxesResponse);
    rpc UpdateTax(UpdateTaxRequest) returns (UpdateTaxResponse);
    rpc DeleteTax(DeleteTaxRequest) returns (GenericResponse);
}

message GenericResponse {
    bool success = 1;
    int32 code = 2;
}

message ValidationError {
    string field   = 1;
    string message = 2;
}

// ─── User ────────────────────────────────────────────────────────────────────

message User {
    string user_id = 1;
    string email = 2;
    string phone = 3;
    string company = 4;
    string siren = 5;
    string vat = 6;
    bool suspended = 8;
    bool oss_enabled = 9;
    string iban = 10;
    string bic = 11;
    string siret = 12;
    string first_name = 13;
    string last_name = 14;
}

message CreateUserRequest {
    string email = 1;
    bool is_admin = 2;
}

message CreateUserResponse {
    bool success = 1;
    int32 code = 2;
    string user_id = 3;
    repeated ValidationError validation_errors = 4;
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    bool success = 1;
    int32 code = 2;
    User user = 3;
}

message UpdateUserRequest {
    string user_id = 1;
    string phone = 2;
    string company = 3;
    string siren = 4;
    string vat = 5;
    bool oss_enabled = 7;
    string iban = 8;
    string bic = 9;
    string siret = 10;
    string first_name = 11;
    string last_name = 12;
}

message UpdateUserResponse {
    bool success = 1;
    int32 code = 2;
    repeated ValidationError validation_errors = 3;
}

message DeleteUserRequest {
    string user_id = 1;
}

message GetUserAccessInfoRequest {
    string user_id = 1;
}

message GetUserAccessInfoByEmailRequest {
    string email = 1;
}

message GetUserAccessInfoResponse {
    bool success = 1;
    int32 code = 2;
    string user_id = 3;
    string email = 4;
    string role = 5;
    bool suspended = 6;
}

message AdminAccount {
    string user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string role = 5;
    string plan = 6;
    string last_login_at = 7;
    bool suspended = 8;
    string phone = 9;
    string company = 10;
    string siren = 11;
    string vat = 12;
    string created_at = 13;
}

message ListAdminAccountsRequest {
    string search = 1;
    repeated string roles = 2;
    repeated string statuses = 3;
    string user_id = 4;
}

message ListAdminAccountsResponse {
    bool success = 1;
    int32 code = 2;
    repeated AdminAccount accounts = 3;
}

message UpdateAdminAccountRequest {
    string user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string role = 5;
    string plan = 6;
    string phone = 7;
    string company = 8;
    string siren = 9;
    string vat = 10;
}

message SuspendAdminAccountRequest {
    string user_id = 1;
}

message TouchUserLastLoginRequest {
    string user_id = 1;
}

message UpdateUserEmailRequest {
    string user_id   = 1;
    string new_email = 2;
}

// ─── Client ──────────────────────────────────────────────────────────────────

// ClientType discriminates a billable client between an individual (B2C) and a
// business (B2B). Wire string equivalents are "individual" / "business".
enum ClientType {
    CLIENT_TYPE_UNSPECIFIED = 0;
    CLIENT_TYPE_INDIVIDUAL  = 1;
    CLIENT_TYPE_BUSINESS    = 2;
}

message Client {
    string client_id = 1;
    string user_id = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
    string phone = 6;
    string company = 7;
    string siren = 8;
    string vat = 9;
    bool archived = 10;
    ClientType client_type = 11;
    string siret = 12;
    string linked_user_id = 13;
}

message CreateClientRequest {
    string user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
    string company = 6;
    string siren = 7;
    string vat = 8;
    ClientType client_type = 9;
    string siret = 10;
}

message CreateClientResponse {
    bool success = 1;
    int32 code = 2;
    string client_id = 3;
    repeated ValidationError validation_errors = 4;
}

message GetClientRequest {
    string client_id = 1;
    string user_id = 2;
}

message GetClientResponse {
    bool success = 1;
    int32 code = 2;
    Client client = 3;
}

message ClientFilters {
    string search = 1;
    repeated string client_types = 2;
}

message ListClientsRequest {
    string user_id = 1;
    bool include_archived = 2;
    int32 page = 3;
    int32 page_size = 4;
    ClientFilters filters = 5;
}

message ListClientsResponse {
    bool success = 1;
    int32 code = 2;
    repeated Client clients = 3;
    int64 total = 4;
}

message UpdateClientRequest {
    string client_id = 1;
    string user_id = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
    string phone = 6;
    string company = 7;
    string siren = 8;
    string vat = 9;
    ClientType client_type = 10;
    string siret = 11;
}

message UpdateClientResponse {
    bool success = 1;
    int32 code = 2;
    repeated ValidationError validation_errors = 3;
}

message ArchiveClientRequest {
    string client_id = 1;
    string user_id = 2;
}

// ─── Address ─────────────────────────────────────────────────────────────────

// OwnerType discriminates address ownership. Wire string equivalents are
// "user" / "client".
enum OwnerType {
    OWNER_TYPE_UNSPECIFIED = 0;
    OWNER_TYPE_USER        = 1;
    OWNER_TYPE_CLIENT      = 2;
}

message Address {
    int32 id = 1;
    OwnerType owner_type = 2;
    string owner_id = 3;
    string name = 4;
    string street = 5;
    string additional_street = 6;
    string city = 7;
    string zip_code = 8;
    int32 country_id = 9;
    string email = 10;
    string phone = 11;
    bool archived = 12;
}

message CreateAddressRequest {
    OwnerType owner_type = 1;
    string owner_id = 2;
    string name = 3;
    string street = 4;
    string additional_street = 5;
    string city = 6;
    string zip_code = 7;
    int32 country_id = 8;
    string email = 9;
    string phone = 10;
    string auth_user_id = 11;
}

message CreateAddressResponse {
    bool success = 1;
    int32 code = 2;
    int32 address_id = 3;
    repeated ValidationError validation_errors = 4;
}

message GetAddressRequest {
    int32 address_id = 1;
    OwnerType owner_type = 2;
    string owner_id = 3;
    string auth_user_id = 4;
}

message GetAddressResponse {
    bool success = 1;
    int32 code = 2;
    Address address = 3;
}

message ListAddressesRequest {
    OwnerType owner_type = 1;
    string owner_id = 2;
    string auth_user_id = 3;
}

message ListAddressesResponse {
    bool success = 1;
    int32 code = 2;
    repeated Address addresses = 3;
}

message UpdateAddressRequest {
    int32 address_id = 1;
    OwnerType owner_type = 2;
    string owner_id = 3;
    string name = 4;
    string street = 5;
    string additional_street = 6;
    string city = 7;
    string zip_code = 8;
    int32 country_id = 9;
    string email = 10;
    string phone = 11;
    string auth_user_id = 12;
}

message UpdateAddressResponse {
    bool success = 1;
    int32 code = 2;
    repeated ValidationError validation_errors = 3;
}

message ArchiveAddressRequest {
    int32 address_id = 1;
    OwnerType owner_type = 2;
    string owner_id = 3;
    string auth_user_id = 4;
}

// ─── Country ──────────────────────────────────────────────────────────────────

message Country {
    int32 id = 1;
    string code = 2;
    string name = 3;
    bool is_eu = 4;
}

message CreateCountryRequest {
    string code = 1;
    string name = 2;
}

message CreateCountryResponse {
    bool success = 1;
    int32 code = 2;
    int32 country_id = 3;
    repeated ValidationError validation_errors = 4;
}

message GetCountryRequest {
    int32 country_id = 1;
}

message GetCountryResponse {
    bool success = 1;
    int32 code = 2;
    Country country = 3;
}

message ListCountriesRequest {}

message ListCountriesResponse {
    bool success = 1;
    int32 code = 2;
    repeated Country countries = 3;
}

message UpdateCountryRequest {
    int32 country_id = 1;
    string code = 2;
    string name = 3;
}

message UpdateCountryResponse {
    bool success = 1;
    int32 code = 2;
    repeated ValidationError validation_errors = 3;
}

message DeleteCountryRequest {
    int32 country_id = 1;
}

// ─── CountryGroup ─────────────────────────────────────────────────────────────

message CountryGroup {
    int32 id = 1;
    string name = 2;
    repeated Country countries = 3;
    repeated Tax taxes = 4;
}

message CreateCountryGroupRequest {
    string name = 1;
}

message CreateCountryGroupResponse {
    bool success = 1;
    int32 code = 2;
    int32 country_group_id = 3;
    repeated ValidationError validation_errors = 4;
}

message GetCountryGroupRequest {
    int32 country_group_id = 1;
}

message GetCountryGroupResponse {
    bool success = 1;
    int32 code = 2;
    CountryGroup country_group = 3;
}

message ListCountryGroupsRequest {}

message ListCountryGroupsResponse {
    bool success = 1;
    int32 code = 2;
    repeated CountryGroup country_groups = 3;
}

message UpdateCountryGroupRequest {
    int32 country_group_id = 1;
    string name = 2;
}

message UpdateCountryGroupResponse {
    bool success = 1;
    int32 code = 2;
    repeated ValidationError validation_errors = 3;
}

message DeleteCountryGroupRequest {
    int32 country_group_id = 1;
}

message AttachCountryRequest {
    int32 country_group_id = 1;
    int32 country_id = 2;
}

message DetachCountryRequest {
    int32 country_group_id = 1;
    int32 country_id = 2;
}

// ─── Tax ─────────────────────────────────────────────────────────────────────

message Tax {
    int32 id = 1;
    string name = 2;
    string rate = 3;
    int32 country_group_id = 4;
    bool is_default = 5;
    int32 original_tax_id = 6; // 0 if this row is the original
    int32 version = 7;
    string superseded_at = 8; // ISO8601, "" if current
    int32 superseded_by = 9; // 0 if not replaced
}

message CreateTaxRequest {
    string name = 1;
    string rate = 2;
    int32 country_group_id = 3;
    bool is_default = 4;
}

message CreateTaxResponse {
    bool success = 1;
    int32 code = 2;
    int32 tax_id = 3;
    repeated ValidationError validation_errors = 4;
}

message GetTaxRequest {
    int32 tax_id = 1;
}

message GetTaxResponse {
    bool success = 1;
    int32 code = 2;
    Tax tax = 3;
}

message ListTaxesRequest {
    int32 country_group_id = 1;
}

message ListTaxesForUserRequest {
    string user_id = 1;
    repeated int32 include_ids = 2;
    // When non-zero, resolves the country group from this user-owned address
    // instead of the user's first address (MIN(id)).
    int32 address_id = 3;
}

message ListTaxesForCountryRequest {
    int32 country_id = 1;
}

message ListTaxesResponse {
    bool success = 1;
    int32 code = 2;
    repeated Tax taxes = 3;
}

message UpdateTaxRequest {
    int32 tax_id = 1;
    string name = 2;
    string rate = 3;
    bool is_default = 4;
}

message UpdateTaxResponse {
    bool success = 1;
    int32 code = 2;
    int32 tax_id = 3; // id of the current version after update (may be a new row)
    repeated ValidationError validation_errors = 4;
}

message DeleteTaxRequest {
    int32 tax_id = 1;
}

message LinkClientUserRequest {
    string client_id      = 1;
    string provider_id    = 2;
    string linked_user_id = 3;
}

message GetClientByLinkedUserRequest {
    string linked_user_id = 1;
}
